Add credits link to github page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="window-body credits-body">
 					<div class="content">
 						<div class="content-container">
-							<p class="credits-text">February 2017 by Denis Z.</p>
+							<a class="credits-link" href="https://d2718nis.github.io" target="_blank">February 2017 by Denis Z.</a>
 						</div>
 					</div>
 					<div class="buttons noselect">
