--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="credits" class="app-window">
+			<div id="credits" class="app-window credits">
 				<div class="window-title noselect">
 					<span class="title-text window-title-text">Credits</span>
 				</div>
