Add <title> tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<meta charset="UTF-8">
 		<!-- Mobile font size fix -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Quotes</title>
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 		<link href="css/main.css" rel="stylesheet">
 		<link href="css/ubuntu.css" rel="stylesheet">
