Edit comments, remove TODOs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	</head>
 	<body>
 		<div class="background">
-			<!-- <div class="left-panel">width: 64px;</div> -->
 			<div class="block-content"></div>
 			<div class="panel noselect">
 				<span class="panel-title-text title-text">Quotes</span>
@@ -25,7 +24,6 @@
 					<img class="wifi-icon" src="img/wifi-icon.png" alt="Wifi icon">
 					<img class="sound-icon" src="img/volume-icon.png" alt="Sound icon">
 					<div class="clock">12:09 AM</div>
-					<!-- <span>d2718nis</span> -->
 				</div>
 			</div>
 			<div id="app" class="app-window">
@@ -40,13 +38,15 @@
 							<img src="img/applications-chat.png" alt="Chat bubbles icon">
 						</div>
 						<div class="content-container">
-							<p class="quote">That's what makes Linux so good: you put in something, and that effort multiplies. It's a positive feedback cycle</p>
+							<p class="quote">That's what makes Linux so good: you put in something,
+							and that effort multiplies. It's a positive feedback cycle</p>
 							<p class="author">— Linus Torvalds</p>
 						</div>
 					</div>
 					<div class="buttons noselect">
 						<a class="button button-roll">Roll</a>
-						<a class="button button-shr" href="https://twitter.com/intent/tweet" target="_blank">Tweet</a>
+						<a class="button button-shr" href="https://twitter.com/intent/tweet"
+						target="_blank">Tweet</a>
 					</div>
 				</div>
 			</div>
@@ -57,7 +57,8 @@
 				<div class="window-body credits-body">
 					<div class="content">
 						<div class="content-container">
-							<a class="credits-link" href="https://d2718nis.github.io" target="_blank">February 2017 by Denis Z.</a>
+							<a class="credits-link" href="https://d2718nis.github.io"
+							target="_blank">February 2017 by Denis Z.</a>
 						</div>
 					</div>
 					<div class="buttons noselect">
@@ -68,12 +69,3 @@
 		</div>
 	</body>
 </html>
-<!--
-======== html ========
-TODO: add left panel with quotes app in it
-======== js   ========
-TODO: Add close button to the credits window
-TODO: "disable" (about color) close and minimize buttons on main app window when the credits is visible
-TODO: cursor: default breaks draggable cursor: move property
-TODO: pull more quotes with one API request (add for cycle)
--->
